--- a/IntelGraphicsDVMTFixup/Info.plist
+++ b/IntelGraphicsDVMTFixup/Info.plist
@@ -39,7 +39,7 @@
 		</dict>
 	</dict>
 	<key>NSHumanReadableCopyright</key>
-	<string>Copyright © 2017 lvs1974. All rights reserved.</string>
+	<string>Copyright © 2017 Sherlocks, Rehabman, lvs1974. All rights reserved.</string>
 	<key>OSBundleLibraries</key>
 	<dict>
 		<key>as.vit9696.Lilu</key>
